changed logo size + get quote button

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- Header Logo -->
             <div class="bringer-header-lp">
                 <a href="./" class="bringer-logo">
-                    <img src="images/logo.png" alt="bringer." width="88" height="24">
+                    <img src="images/logo.png" alt="bringer." width="158" height="124">
                 </a>
             </div>
              <!-- Main Menu -->
@@ -471,18 +471,19 @@
 .see-all-btn {
   background: #161616;
   border: 2px solid transparent;
-  font-size: 18px;
+  font-size: 12px; /* Reduced font size */
   font-weight: 700;
   color: #fff;
   text-decoration: none;
-  min-width: 140px;
-  min-height: 51px;
+  min-width: 120px; /* Reduced minimum width */
+  min-height: 40px; /* Reduced minimum height */
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
   transition: all 0.5s ease;
 }
+
 
 .see-all-btn:hover {
   background: transparent;
